--- a/Document/Pages/Index.razor
+++ b/Document/Pages/Index.razor
@@ -3,7 +3,8 @@
 <PageTitle>Index</PageTitle>
 
 <div id="stack"
-     class="border">
+     class="border overflow-hidden"
+     style="height: @(_canvasSize.Height)px; width: @(_canvasSize.Width)px">
     @* 
     We stack two canvases to improve performance because we don't need to rerender the PDF all the time.
     See MDN recommendations: https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Optimizing_canvas#use_multiple_layered_canvases_for_complex_scenes
